logo and nav bar added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,44 @@
     <title>Architects</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!---------------------------- 
+        Header Section Start 
+    ----------------------------->
+    <header class="header-section">
+      <!-- Nav-Bar section start-->
+      <nav class="logo-nav size">
+        <div class="logo">
+          <h2 class="logo-title">G3 Architects</h2>
+        </div>
+        <div class="nav">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Login</a></li>
+          </ul>
+        </div>
+      </nav>
+      <!-- Nav-Bar section end -->
+      <!-- Hero section start  -->
+      <section class="hero">
+        <div class="hero-info"></div>
+        <div class="hero-img">
+          <img src="" alt="" />
+        </div>
+      </section>
+      <!-- Hero section end  -->
+    </header>
+    <!---------------------------- 
+        Header Section end 
+    ----------------------------->
+
+    <!---------------------------- 
+        Main Section Start 
+    ----------------------------->
+    <!---------------------------- 
+        Main Section end 
+    ----------------------------->
+  </body>
 </html>
