--- a/index.html
+++ b/index.html
@@ -28,10 +28,22 @@
       </nav>
       <!-- Nav-Bar section end -->
       <!-- Hero section start  -->
-      <section class="hero">
-        <div class="hero-info"></div>
+      <section class="hero margin-b">
+        <div class="hero-info">
+          <h2 class="hero-info-title">
+            Brand New <br />
+            Group of Architects
+          </h2>
+          <p class="hero-info-para">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in <br />
+            some form, by injected humour, or randomised words which don't look
+            even
+          </p>
+          <button class="hero-btn">Explore More</button>
+        </div>
         <div class="hero-img">
-          <img src="" alt="" />
+          <img src="images/banner.png" alt="" />
         </div>
       </section>
       <!-- Hero section end  -->
@@ -43,6 +55,82 @@
     <!---------------------------- 
         Main Section Start 
     ----------------------------->
+    <main class="size">
+      <!-- quick-features section  -->
+      <section class="quick-features margin-b">
+        <div class="quick-img">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="quick-info">
+          <h2 class="quick-title">
+            <samp class="gray">Quick list</samp>
+            <samp class="black">of Our </samp><br />
+            <samp class="orrenge">Features</samp>
+          </h2>
+          <p class="quick-para">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="hero-btn">Explore More</button>
+        </div>
+      </section>
+      <!-- Feature love and enjoy section start -->
+      <section class="feature-love">
+        <div class="feature-love-info">
+          <h2 class="love-title">Features you will love & enjoy</h2>
+          <p class="love-para">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <div class="love-cards">
+            <div class="love-card">
+              <h3 class="card-title">Dexktop & Mobile Version</h3>
+              <p class="card-para">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="love-card">
+              <h3 class="card-title">Drag & Drop Builder</h3>
+              <p class="card-para">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="love-card">
+              <h3 class="card-title">Awesome Modern Design</h3>
+              <p class="card-para">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="love-card">
+              <h3 class="card-title">Super Easy to Edit</h3>
+              <p class="card-para">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="feature-love-img">
+          <img src="images/architect.png" alt="" />
+          <div class="love-btn">
+            <h2>10+Year</h2>
+            <p>Experience</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <!---------------------------- 
         Main Section end 
     ----------------------------->
