--- a/index.html
+++ b/index.html
@@ -130,6 +130,53 @@
           </div>
         </div>
       </section>
+      <!-- Facts section start  -->
+      <section class="facts margin-b">
+        <h2 class="facts-title">Some Facts</h2>
+        <p class="facts-para">
+          There are many variations of passages of Lorem Ipsum available, but
+          <br />
+          the majority have suffered alteration.
+        </p>
+        <div class="fact-cards">
+          <div class="fact-card">
+            <img src="images/icons/ribon.png" alt="" />
+            <h3>54</h3>
+            <p>Awards Winnings</p>
+          </div>
+          <div class="fact-card">
+            <img src="images/icons/projects.png" alt="" />
+            <h3>1458</h3>
+            <p>Project Finished</p>
+          </div>
+          <div class="fact-card">
+            <img src="images/icons/customers.png" alt="" />
+            <h3>590</h3>
+            <p>Clients Worked</p>
+          </div>
+          <div class="fact-card">
+            <img src="images/icons/email.png" alt="" />
+            <h3>22578</h3>
+            <p>Email Send</p>
+          </div>
+        </div>
+      </section>
+      <!-- Sponsors section start  -->
+      <section class="sponsors margin-b">
+        <h2 class="sponsor-title">Our Sponsors</h2>
+        <p class="sponsor-para">
+          There are many variations of passages of Lorem Ipsum available, but
+          <br />
+          the majority have suffered alteration.
+        </p>
+        <div class="sponsor-img">
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+        </div>
+      </section>
     </main>
     <!---------------------------- 
         Main Section end 
