--- a/index.html
+++ b/index.html
@@ -181,5 +181,10 @@
     <!---------------------------- 
         Main Section end 
     ----------------------------->
+    <footer class="footer size margin-b">
+      <samp
+        >All rights reserved copyright@2023 startup landing page design</samp
+      >
+    </footer>
   </body>
 </html>
