--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Architects</title>
+    <!-- font-awesome  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- font-awesome  -->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -176,6 +185,23 @@
           <img src="images/sponsors/spotify.png" alt="" />
           <img src="images/sponsors/telerama.png" alt="" />
         </div>
+      </section>
+      <!-- Newsletr section start  -->
+      <section class="newsletr">
+        <form action="">
+          <h1>Join Our Newsletter</h1>
+          <div class="email-box">
+            <i class="fas fa-envelope"></i>
+            <input
+              class="tbox"
+              type="email"
+              name=""
+              value=""
+              placeholder="Enter your email"
+            />
+            <button class="btn" type="button" name="button">Subscribe</button>
+          </div>
+        </form>
       </section>
     </main>
     <!---------------------------- 
